--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -10,3 +10,5 @@ block.erida-rubidium-cliff-crusher.name = Дробитель скал
 block.erida-simple-core.name = Простое ядро
 
 unit.erida-particle.name = Частица
+
+sector.debris.name = Развалины
