--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -12,3 +12,5 @@ block.erida-simple-core.name = Простое ядро
 unit.erida-particle.name = Частица
 
 sector.debris.name = Развалины
+
+mod.erida.description = В разработке...
