--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -14,3 +14,4 @@ block.erida-simple-core.name = Простое ядро
 unit.erida-particle.name = Частица
 
 sector.debris.name = Развалины
+sector.quarry.name = Карьер
