--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -10,6 +10,10 @@ block.erida-rubidium-duct.name = Рубидиевый канал
 block.erida-sand-filter.name = Фильтр песка
 block.erida-rubidium-cliff-crusher.name = Дробитель скал
 block.erida-simple-core.name = Простое ядро
+block.erida-furnace.name = Плавильня
+block.erida-leticen-smelter.name = Плавильня летикена
+block.erida-rubidium-conduit.name = Рубидиевый трубопровод
+block.erida-rubidium-pump.name = Рубидиевый насос
 
 unit.erida-particle.name = Частица
 
