--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -14,6 +14,9 @@ block.erida-furnace.name = Плавильня
 block.erida-leticen-smelter.name = Плавильня летикена
 block.erida-rubidium-conduit.name = Рубидиевый трубопровод
 block.erida-rubidium-pump.name = Рубидиевый насос
+block.erida-heat-quarry.name = Тепловой бур
+block.erida-leticen-juction.name = Летикеновый перекрёсток
+block.erida-leticen-router.name = Летикеновый маршрутизатор
 
 unit.erida-particle.name = Частица
 
