--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -4,6 +4,7 @@ techtree.erida = Эрида
 
 item.erida-rubidium.name = Рубидий
 item.erida-leticen.name = Летикен
+item.erida-loelo.name = Лоэло
 
 block.erida-rubidium-wall.name = Рубидиевая стена
 block.erida-rubidium-duct.name = Рубидиевый канал
@@ -17,6 +18,13 @@ block.erida-rubidium-pump.name = Рубидиевый насос
 block.erida-heat-quarry.name = Тепловой бур
 block.erida-leticen-juction.name = Летикеновый перекрёсток
 block.erida-leticen-router.name = Летикеновый маршрутизатор
+block.erida-advanced-sand-filter.name = Продвинутый фильтр песка
+block.erida-sand-extractor.name = Экстрактор песка
+block.erida-energy-node.name = Энергетический узел
+block.erida-energy-battery.name = Аккумулятор
+block.erida-energy-generator.name = Генератор энергии
+block.erida-mini-mass-driver.name = Небольшая катапульта ресурсов
+block.erida-leticen-bridge.name = Летикеновый мост
 
 unit.erida-particle.name = Частица
 
