--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -5,6 +5,8 @@ techtree.erida = Эрида
 item.erida-rubidium.name = Рубидий
 item.erida-leticen.name = Летикен
 item.erida-loelo.name = Лоэло
+item.erida-plastic.name = Пластик
+item.erida-foringor.name = Форингор
 
 block.erida-rubidium-wall.name = Рубидиевая стена
 block.erida-rubidium-duct.name = Рубидиевый канал
@@ -26,7 +28,35 @@ block.erida-energy-generator.name = Генератор энергии
 block.erida-mini-mass-driver.name = Небольшая катапульта ресурсов
 block.erida-leticen-bridge.name = Летикеновый мост
 
+block.erida-advanced-core.name = Продвинутое ядро
+block.erida-advanced-pump.name = Продвинутый насос
+block.erida-defender.name = Защитник
+block.erida-destroyer.name = Уничтожитель
+block.erida-display.name = Дисплей
+block.erida-durable-message.name = Прочное сообщение
+block.erida-durable-switch.name = Прочный переключатель
+block.erida-flying-factory-point.name = Фабрика летающих юнитов
+block.erida-foringor-smelter.name = Плавильня форингора
+block.erida-foringor-wall-large.name = Большая форингоровая стена
+block.erida-foringor-wall.name = Форингоровая стена
+block.erida-large-cliff-crusher.name = Большой дробитель скал
+block.erida-large-solar-energy-generator.name = Большая солнечная панель
+block.erida-leticen-wall-large.name = Большая летикеновая стена
+block.erida-leticen-wall.name = Летикеновая стена
+block.erida-loelo-wall-large.name = Большая лоэловая стена
+block.erida-loelo-wall.name = Лоэловая стена
+block.erida-mech-factory-point.name = Фабрика мехов
+block.erida-mini-memory-storage.name = Небольшое хранилище памяти
+block.erida-oil-mining-station.name = Нефтяная вышка
+block.erida-plastic-factory.name = Фабрика пластика
+block.erida-rage.name = Гнев
+block.erida-rubidium-wall-large.name = Большая рубидиевая стена
+block.erida-solar-energy-generator.name = Солнечная панель
+block.erida-tornado.name = Торнадо
+block.erida-weak-processor.name = Слабый процессор
+
 unit.erida-particle.name = Частица
 
 sector.debris.name = Развалины
 sector.quarry.name = Карьер
+sector.LoeloMines.name = Залежи лоэло
